@@ -29,6 +29,7 @@ DFHack Future
     Misc Improvements
         dwarfmonitor widgets' positions, formats, etc. are now customizable (see Readme)
         dwarfmonitor weather display now separated from the date display
+        dwarfmonitor: New mouse cursor widget
         gui/gm-editor: Pointers can now be displaced
         gui/hack-wish: renamed to gui/create-item
         "keybinding list" accepts a context
